# sdk-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
holidays_rest/: __init__.py  _async_client.py  _client.py  _errors.py  _models.py
tests/: conftest.py  test_async_client.py  test_client.py  test_models.py
