[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holidays-rest"
version = "1.1.0"
description = "Official Python SDK for the holidays.rest API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["holidays", "public-holidays", "calendar", "api", "sdk"]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://www.holidays.rest"
Documentation = "https://docs.holidays.rest"
Repository = "https://github.com/holidays-rest/sdk-py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["holidays_rest"]
